crates/locus-core/tests/snapshots/snapshot_dictionaries__aruco4x4_100_codes.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::ArUco4x4_100)"
---
(
    16,
    400,
    "8fe3486b6e4a40d5",
)
