crates/locus-core/tests/snapshots/snapshot_dictionaries__aruco4x4_100_parity.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::ArUco4x4_100)"
---
(
    513,
    "a894445b0d39e928",
    800,
    "b3660fd5406f307d",
)
