crates/locus-core/tests/snapshots/snapshot_dictionaries__aruco4x4_50_codes.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::ArUco4x4_50)"
---
(
    16,
    200,
    "11362d46269a5ca8",
)
