crates/locus-core/tests/snapshots/snapshot_dictionaries__aruco4x4_50_parity.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::ArUco4x4_50)"
---
(
    513,
    "fa0a5b53e3d6b96c",
    400,
    "4db714ab79e1f3b5",
)
