crates/locus-core/tests/snapshots/snapshot_dictionaries__aruco6x6_250_codes.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::ArUco6x6_250)"
---
(
    36,
    1000,
    "6289f5a4cd632da7",
)
