crates/locus-core/tests/snapshots/snapshot_dictionaries__aruco_mip_36h12_codes.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::ArUcoMip36h12)"
---
(
    36,
    1000,
    "f8efd65c259c4103",
)
