crates/locus-core/tests/snapshots/snapshot_dictionaries__aruco_mip_36h12_parity.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::ArUcoMip36h12)"
---
(
    385,
    "14c983500bd993ca",
    6000,
    "d75101bc1361fd01",
)
