crates/locus-core/tests/snapshots/snapshot_dictionaries__tag16h5_codes.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::AprilTag16h5)"
---
(
    16,
    120,
    "2afd7beddba4e8aa",
)
