crates/locus-core/tests/snapshots/snapshot_dictionaries__tag16h5_parity.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::AprilTag16h5)"
---
(
    145,
    "853d9e2b3486fe12",
    360,
    "f62e7978ac8e86a5",
)
