crates/locus-core/tests/snapshots/snapshot_dictionaries__tag25h9_parity.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::AprilTag25h9)"
---
(
    161,
    "e20835b6a340a37e",
    700,
    "e31891d2919cb585",
)
