crates/locus-core/tests/snapshots/snapshot_dictionaries__tag36h10_parity.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::AprilTag36h10)"
---
(
    1041,
    "4305bac0509e9d32",
    46400,
    "5ac66d45b2ac17c5",
)
