crates/locus-core/tests/snapshots/snapshot_dictionaries__tag36h11_codes.snap
---
source: crates/locus-core/tests/snapshot_dictionaries.rs
expression: "snapshot_dict(TagFamily::AprilTag36h11)"
---
(
    36,
    2348,
    "91656978a7f4a82e",
)
